Bug 487530 - No indication of PDF exporting progress
Summary: No indication of PDF exporting progress
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-25 12:29 UTC by Mohammed Khoory
Modified: 2024-06-23 18:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mohammed Khoory 2024-05-25 12:29:07 UTC
SUMMARY
After scanning a few pages, when exporting a PDF, there is no indication of the export progress. The dialog 

For small PDFs this may not be a problem, but for large PDFs with OCR enabled, the export process may take some time (especially with OCR).  However, the app doesn't show any indication that saving is still in progress. The only way I can tell that the PDF is still being exported is my CPU goes high for several seconds and I only know that it's done when it goes back down.

STEPS TO REPRODUCE
1. Scan a few pages with text
2. Export the PDF but make sure you have OCR enabled
3. Press the save button

OBSERVED RESULT
The dialog disappears. There is no way for you to know if it's still saving or if it's done

EXPECTED RESULT
A dialog, or some inidication should show that the app is still not done saving the file.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.6.30-2-MANJARO (64bit)
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Skanpage installed from Manjaro's repos.
Using Wayland on Intel graphics. Using a HP OfficeJet Pro 8620 as my scanner. 
Tessaract version 5.3.4-1 installed from Manjaro repo
I was running an OCR with turkish and arabic languages.
Comment 1 Alexander Stippich 2024-06-23 18:21:21 UTC
Git commit 38670cd16e6f40382edfc57d31eaaa2ade302f84 by Alexander Stippich.
Committed on 23/06/2024 at 18:16.
Pushed by astippich into branch 'master'.

add status update messages during saving

M  +3    -0    src/DocumentSaver.cpp

https://invent.kde.org/utilities/skanpage/-/commit/38670cd16e6f40382edfc57d31eaaa2ade302f84