add status update messages during saving

BUG: 487530